--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -19,3 +19,11 @@
 /study.class
 /study/
 /studyclass/
+/overrideTest.class
+/point.class
+/point3.class
+/point3$overrideTest.class
+/child1.class
+/parent.class
+/PointTest.class
+/point3D.class
